--- a/app/index.css
+++ b/app/index.css
@@ -13,12 +13,37 @@ body {
   justify-content: center;
 }
 
+.popular-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.popular-item: {
+  margin: 20px;
+  text-align: center;
+}
+
+.space-list-items {
+  margin-bottom: 7px;
+}
+
+.avatar {
+  width: 150px;
+  border-radius: 50%;
+}
+
+.popular-rank {
+  font-size: 20px;
+  margin: 10px;
+}
+
 ul {
   padding: 0;
 }
 
 li {
-  list-style-type: none; 
+  list-style-type: none;
 }
 
 
