--- a/app/index.css
+++ b/app/index.css
@@ -79,10 +79,41 @@ body {
   transform: translateY(1px);
 }
 
+.row {
+  display: flex;
+  justify-content: space-around;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  align-items: center;
+}
+
+.column input {
+  border-radius: 3px;
+  margin: 10px 0;
+  padding: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.43);
+  font-size: 16px;
+  width: 80%;
+}
+
+.column label {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 200;
+}
+
+.header {
+  text-align: center;
+  font-weight: 200;
+  font-size: 30px;
+}
 
 ul {
   padding: 0;
-  background-color: green;
 }
 
 li {
