--- a/app/index.css
+++ b/app/index.css
@@ -46,6 +46,19 @@ body {
   font-weight: bold;
 }
 
+.reset {
+  border: none;
+  background: transparent;
+  color: #d0021b;
+  display: black;
+  width: 100%;
+  text-align: center;
+}
+
+.reset:hover {
+  cursor: pointer;
+}
+
 .nav li {
   margin-right: 15px;
 }
