--- a/app/index.css
+++ b/app/index.css
@@ -8,9 +8,29 @@ body {
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+  color: #d0021b;
+}
+
+li {
+  list-style-type: none;
+}
+
+ul {
+  padding: 0;
+}
+
 .languages {
   display: flex;
   justify-content: center;
+}
+
+
+.languages li {
+  margin: 10px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .popular-list {
@@ -24,6 +44,17 @@ body {
   text-align: center;
 }
 
+.popular-rank {
+  font-size: 20px;
+  margin: 10px;
+}
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .space-list-items {
   margin-bottom: 7px;
 }
@@ -33,13 +64,12 @@ body {
   border-radius: 50%;
 }
 
-.popular-rank {
-  font-size: 20px;
-  margin: 10px;
-}
-
 .nav {
   display: flex;
+}
+
+.nav li {
+  margin-right: 15px;
 }
 
 .active {
@@ -57,16 +87,6 @@ body {
 
 .reset:hover {
   cursor: pointer;
-}
-
-.nav li {
-  margin-right: 15px;
-}
-
-.home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .button {
@@ -123,23 +143,4 @@ body {
   text-align: center;
   font-weight: 200;
   font-size: 30px;
-}
-
-ul {
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
-}
-
-a {
-  text-decoration: none;
-  color: #d0021b;;
-}
-
-.languages li {
-  margin: 10px;
-  font-weight: bold;
-  cursor: pointer;
 }
